Use more RAM when running main tasks